--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <div class="content first-content">
               <div class="container-fluid">
                   <div class="col-md-3">
-                      <div class="author-image"><img src="img/stella.jpg" alt="Author Image"></div>
+                      <div class="author-image"><img src="img/Stella.jpg" alt="Author Image"></div>
                   </div>
                   <div class="col-md-9">
                       <h2>Stella Bella</h2>
