--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           </div>
           <ul>
             <li><a href="#1"><i class="fa fa-home"></i> <em>Home</em></a></li>
-            <li><a href="#2"><i class="fa fa-user"></i> <em>About</em></a></li>
+            <li><a href="#2"><i class="fa fa-user"></i> <em>My Mission</em></a></li>
             <li><a href="#3"><i class="fa fa-pencil"></i> <em>Entries</em></a></li>
             <li><a href="#4"><i class="fa fa-image"></i> <em>Work</em></a></li>
             <li><a href="#5"><i class="fa fa-envelope"></i> <em>Contact</em></a></li>
@@ -71,17 +71,33 @@
                 <div class="container-fluid">
                     <div class="col-md-6">
                         <div class="left-content">
-                            <h2>About Us</h2>
-                            <p>Please tell your friends about templatemo website. A variety of free CSS templates are available for immediate downloads.</p> 
-                            <p>Phasellus vitae faucibus orci. Etiam eleifend orci sed faucibus semper. Cras varius dolor et augue fringilla, eu commodo sapien iaculis. Donec eget dictum tellus. <a href="#">Curabitur</a> a interdum diam. Nulla vestibulum porttitor porta.</p>
-                            <p>Nulla vitae interdum libero, vel posuere ipsum. Phasellus interdum est et dapibus tempus. Vestibulum malesuada lorem condimentum mauris ornare dapibus. Curabitur tempor ligula et <a href="#">placerat</a> molestie.</p>
-                            <p>Aliquam efficitur eu purus in interdum. <a href="#">Etiam tincidunt</a> magna ex, sit amet lobortis felis bibendum id. Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
+                            <h2>My Mission</h2>
+                            <p>Hi, I am Stella</p> 
+                            <br>
+                            <br>
+                            <br>
+                            <br>
+                            <br>
+                            <br>
+                            <br>
+                            <br>
+                            <br>
+                            <p>Can customise anything in this space </p>
+                            <br>
+                            <br>
+                            <br>
+                            <br>
+                            <p>Separated this space into coloumns, can add images/links etc </p>
+                            <br>
+                            <br>
+                            <br>
+
                           <div class="main-btn"><a href="#3">Read More</a></div>
                       </div>
                     </div>
                     <div class="col-md-6">
                         <div class="right-image">
-                          <img src="img/about_image.jpg" alt="">
+                          <img src="#" alt="">
                       </div>
                     </div>
                 </div>
@@ -97,14 +113,17 @@
                                     <div class="row">
                                         <div class="col-md-6">
                                             <div class="left-content">
-                                                <h2>Quisque commodo quam</h2>
-                                                <p>Vestibulum augue ex, finibus sit amet nisi id, maximus ultrices ipsum. Maecenas rhoncus nibh in mauris lobortis, a maximus diam faucibus. In et eros urna. Suspendisse potenti. Pellentesque commodo, neque nec molestie tempus, purus ante feugiat augue.</p>
+                                                <h2>Space to talk about experiences, or anything in general</h2>
+                                                <p></p>
+                                                <p>Can extend/reduce this space as you want to fit your needs</p>
+                                                <br>
+                                                <p>have a few links set up to improve workflow and accessibility</p>
                                                 <div class="main-btn"><a href="#4">Continue Reading</a></div>
                                             </div>
                                         </div>
                                         <div class="col-md-6">
                                             <div class="right-image">
-                                                <img src="img/first_service.jpg" alt="first service">
+                                                <img src="img/SoGal.jpg" alt="first service">
                                             </div>
                                         </div>
                                     </div>
@@ -120,8 +139,8 @@
                                         </div>
                                         <div class="col-md-6">
                                             <div class="right-content">
-                                                <h2>Maecenas eu purus eu sapien</h2>
-                                                <p>Sed vitae felis in lorem mollis mollis eget in leo. Donec commodo, ex nec rutrum venenatis, nisi nisl malesuada magna, sed semper ipsum enim a ipsum. Aenean in ante vel mi molestie bibendum. Quisque sit amet lacus in diam pretium faucibus. Cras vel justo lorem.</p>
+                                                <h2>Another Heading </h2>
+                                                <p>I can customise the "work" on the next page. I have set it up with some images and texts to give you an Idea of what it would look like. Its not limited to static image</p>
                                                 <div class="main-btn"><a href="#4">Continue Reading</a></div>
                                             </div>
                                         </div>
@@ -143,7 +162,7 @@
                                     <a href="img/first_big_item.jpg" data-lightbox="image-1"><div class="hover-effect">
                                         <div class="hover-content">
                                             <h2>Number One</h2>
-                                            <p>Quisque sit amet lacus in diam pretium faucibus. Cras vel justo lorem.</p>
+                                            <p>Short description of the project</p>
                                         </div>
                                     </div></a>
                                     <div class="image">
@@ -157,8 +176,8 @@
                                 <div class="thumb">
                                     <a href="img/second_big_item.jpg" data-lightbox="image-1"><div class="hover-effect">
                                         <div class="hover-content">
-                                            <h2>Number Two</h2>
-                                            <p>Donec eget dictum tellus. Curabitur a interdum diam. Nulla vestibulum porttitor porta.</p>
+                                            <h2>Title</h2>
+                                            <p></p>
                                         </div>
                                     </div></a>
                                     <div class="image">
@@ -172,8 +191,8 @@
                                 <div class="thumb">
                                     <a href="img/third_big_item.jpg" data-lightbox="image-1"><div class="hover-effect">
                                         <div class="hover-content">
-                                            <h2>Number Three</h2>
-                                            <p>Cras varius dolor et augue fringilla, eu commodo sapien iaculis.</p>
+                                            <h2>Title</h2>
+                                            <p></p>
                                         </div>
                                     </div></a>
                                     <div class="image">
@@ -187,8 +206,8 @@
                                 <div class="thumb">
                                     <a href="img/fourth_big_item.jpg" data-lightbox="image-1"><div class="hover-effect">
                                         <div class="hover-content">
-                                            <h2>Number Four</h2>
-                                            <p>Vestibulum augue ex, finibus sit amet nisi id, maximus ultrices ipsum.</p>
+                                            <h2>Title</h2>
+                                            <p></p>
                                         </div>
                                     </div></a>
                                     <div class="image">
@@ -202,8 +221,8 @@
                                 <div class="thumb">
                                     <a href="img/fifth_big_item.jpg" data-lightbox="image-1"><div class="hover-effect">
                                         <div class="hover-content">
-                                            <h2>Fifth Item</h2>
-                                            <p>Donec commodo, ex nec rutrum venenatis, nisi nisl malesuada magna.</p>
+                                            <h2>Title</h2>
+                                            <p></p>
                                         </div>
                                     </div></a>
                                     <div class="image">
@@ -217,8 +236,8 @@
                                 <div class="thumb">
                                     <a href="img/sixth_big_item.jpg" data-lightbox="image-1"><div class="hover-effect">
                                         <div class="hover-content">
-                                            <h2>Sixth Item</h2>
-                                            <p>Maecenas dapibus neque sed nisl consectetur, id semper nisi egestas.</p>
+                                            <h2>Title</h2>
+                                            <p></p>
                                         </div>
                                     </div></a>
                                     <div class="image">
@@ -232,8 +251,8 @@
                                 <div class="thumb">
                                     <a href="img/seventh_big_item.jpg" data-lightbox="image-1"><div class="hover-effect">
                                         <div class="hover-content">
-                                            <h2>Number Seven</h2>
-                                            <p>Etiam aliquet, est id varius fringilla, eros libero pellentesque lectus.</p>
+                                            <h2>Title</h2>
+                                            <p></p>
                                         </div>
                                     </div></a>
                                     <div class="image">
@@ -247,8 +266,8 @@
                                 <div class="thumb">
                                     <a href="img/eight_big_item.jpg" data-lightbox="image-1"><div class="hover-effect">
                                         <div class="hover-content">
-                                            <h2>Number Eight</h2>
-                                            <p>Vestibulum augue ex, finibus sit amet nisi id, maximus ultrices ipsum.</p>
+                                            <h2>Title</h2>
+                                            <p></p>
                                         </div>
                                     </div></a>
                                     <div class="image">
@@ -262,8 +281,8 @@
                                 <div class="thumb">
                                     <a href="img/ninth_big_item.jpg" data-lightbox="image-1"><div class="hover-effect">
                                         <div class="hover-content">
-                                            <h2>Number Nine</h2>
-                                            <p>Orci varius natoque penatibus et magnis dis parturient montes.</p>
+                                            <h2>Title</h2>
+                                            <p></p>
                                         </div>
                                     </div></a>
                                     <div class="image">
@@ -277,8 +296,8 @@
                                 <div class="thumb">
                                     <a href="img/fifth_big_item.jpg" data-lightbox="image-1"><div class="hover-effect">
                                         <div class="hover-content">
-                                            <h2>Number Ten</h2>
-                                            <p>Vestibulum augue ex, finibus sit amet nisi id, maximus ultrices ipsum.</p>
+                                            <h2>Title</h2>
+                                            <p></p>
                                         </div>
                                     </div></a>
                                     <div class="image">
@@ -292,8 +311,8 @@
                                 <div class="thumb">
                                     <a href="img/first_big_item.jpg" data-lightbox="image-1"><div class="hover-effect">
                                         <div class="hover-content">
-                                            <h2>Eleventh Item</h2>
-                                            <p>Cras varius dolor et augue fringilla, eu commodo sapien iaculis.</p>
+                                            <h2>Title</h2>
+                                            <p></p>
                                         </div>
                                     </div></a>
                                     <div class="image">
@@ -307,8 +326,8 @@
                                 <div class="thumb">
                                     <a href="img/second_big_item.jpg" data-lightbox="image-1"><div class="hover-effect">
                                         <div class="hover-content">
-                                            <h2>Twelvth Item</h2>
-                                            <p>Etiam tincidunt magna ex, sit amet lobortis felis bibendum id.</p>
+                                            <h2>Title</h2>
+                                            <p></p>
                                         </div>
                                     </div></a>
                                     <div class="image">
@@ -332,7 +351,7 @@
             3. Click "Share" and choose "Embed map" tab
             4. Copy only URL and paste it within the src="" field below
 	-->
-                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3647.3030413476204!2d100.5641230193719!3d13.757206847615207!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xf51ce6427b7918fc!2sG+Tower!5e0!3m2!1sen!2sth!4v1510722015945" width="100%" height="500px" frameborder="0" style="border:0" allowfullscreen></iframe>
+                           <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3647.3030413476204!2d100.5641230193719!3d13.757206847615207!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xf51ce6427b7918fc!2sG+Tower!5e0!3m2!1sen!2sth!4v1510722015945" width="100%" height="500px" frameborder="0" style="border:0" allowfullscreen></iframe> -->
                         </div>
                     </div>
                     <div class="col-md-6">
