--- a/index.html
+++ b/index.html
@@ -76,13 +76,13 @@
                             <br>
                             <br>
                             <br>
-                            <br>
-                            <br>
-                            <br>
-                            <br>
-                            <br>
-                            <br>
                             <p>Can customise anything in this space </p>
+                            <br>
+                            <br>
+                            <br>
+                            <br>
+                            <br>
+                            <p>Can also insert videos like in Samantha's website</p>
                             <br>
                             <br>
                             <br>
