--- a/index.html
+++ b/index.html
@@ -75,10 +75,9 @@
                             <p>Hi, I am Stella</p> 
                             <br>
                             <br>
-                            <br>
-                            <p>Can customise anything in this space </p>
-                            <br>
-                            <br>
+                            
+                            <p>Can customise anything in this space with "pages", like how in Samantha's website, she links to other pages through her navigation bar at the top "Home. Samantha Wills. Books. Courses" etc </p>
+                            
                             <br>
                             <br>
                             <br>
