--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                       <p> Quote/Legacy</p>
                       <div class="main-btn"><a href="#2">Read More</a></div>
                       <div class="fb-btn"><a rel="nofollow" href="#">RiceRemedy</a></div>
-                      <div class="fb-btn"><a rel="nofollow" href="#">SoGal Foundation</a></div>
+                      <div class="fb-btn"><a rel="nofollow" href="https://www.iamsogal.com/" target="_blank">SoGal Foundation</a></div>
                   </div>
               </div>
             </div>
